Added Assignment Python Batch Processing Spark

--- a/notebooks/Dibimbing-spark.ipynb
+++ b/notebooks/Dibimbing-spark.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "a8ac2902-1ba2-4f59-b3db-da15788af820",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "0ba0f442-5349-4f76-87e6-7147a1963dc7",
    "metadata": {
     "tags": []
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "postgres_host = os.getenv('POSTGRES_CONTAINER_NAME')\n",
-    "postgres_dw_db = os.getenv('POSTGRES_DW_DB')\n",
+    "postgres_dw_db = os.environ['POSTGRES_DW_DB']\n",
     "postgres_user = os.getenv('POSTGRES_USER')\n",
     "postgres_password = os.getenv('POSTGRES_PASSWORD')"
    ]
@@ -70,6 +70,80 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "027fdb6a-9692-4f32-b068-7e4c25ce93e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warehouse\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.environ['POSTGRES_DW_DB'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9b9cbf3c-42c6-4a77-9534-31299fade433",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "password\n",
+      "dataeng-postgres\n",
+      "warehouse\n",
+      "user\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(postgres_password)\n",
+    "print(postgres_host)\n",
+    "print(postgres_dw_db)\n",
+    "print(postgres_user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21781381-5016-4f03-bf7c-db6688546d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9686d2d-b237-4e1d-80e0-85a0a238a209",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataeng-postgres\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(postgres_host)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "025b23a6-c84c-48d4-87e4-94d4a9953d1b",
    "metadata": {
     "tags": []
@@ -90,48 +164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5bc1fd6b-ed91-4843-af3a-14e7c6114b6a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - in-memory</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://dibimbing-jupyter:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v3.3.2</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>Dibimbing</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f1da902f730>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pyspark.sql.session.SparkSession object at 0x7fb860452f50>\n"
+     ]
     }
    ],
    "source": [
-    "spark"
+    "print(spark)"
    ]
   },
   {
@@ -702,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "b9a81123-e2db-455a-a118-62ab7c9a9dd6",
    "metadata": {
     "tags": []
@@ -720,7 +768,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
+   "id": "9fdecd52-87cb-48f1-a4fd-facd65de6f25",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jdbc:postgresql://dataeng-postgres/warehouse\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(jdbc_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "75f7b87d-7135-4cde-875e-961fae293f21",
    "metadata": {
     "tags": []
@@ -736,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "58e2aafe-7bd5-42e4-81dd-38122bc3cf1c",
    "metadata": {
     "tags": []
